--- a/hackathon.ipynb
+++ b/hackathon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_df = pd.read_csv('main_df_normalize.csv', index_col='id')       \n",
+    "# test_df = pd.read_csv('main_df_normalize_test.csv', index_col='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,13 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# основные параметры нейросети\n",
-    "main_mape = 25\n",
-    "count_epochs = 0\n",
+    "main_mape = 20\n",
+    "current_epochs = 0\n",
     "model = Regression().double()\n",
     "criterion = nn.HuberLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.003)"
@@ -149,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,9 +182,9 @@
     "\n",
     "    y_valid_series = predict_frame['Q_OIS_true']\n",
     "    y_pred_valid = predict_frame['Q_OIS_predict']\n",
-    "\n",
+    "    \n",
     "    mape = MAPE(y_valid_series, y_pred_valid) * 100\n",
-    "    print(f'MAPE = {mape}, Epoch: {count_epochs}')\n",
+    "    print(f'MAPE = {mape}, Epoch: {current_epochs}')\n",
     "\n",
     "    if test_flag:\n",
     "        if mape < main_mape:\n",
@@ -188,41 +198,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAPE = 25.83654674476122, Epoch: 1\n",
-      "MAPE = 22.736874309931633, Epoch: 2\n",
-      "MAPE = 22.514683062071615, Epoch: 3\n",
-      "MAPE = 21.87292258917311, Epoch: 4\n",
-      "MAPE = 22.325121778407706, Epoch: 5\n",
-      "MAPE = 21.356721350409565, Epoch: 6\n",
-      "MAPE = 21.183513549181637, Epoch: 7\n",
-      "MAPE = 21.366256944164867, Epoch: 8\n",
-      "MAPE = 21.09778736651502, Epoch: 9\n",
-      "MAPE = 20.93531503124475, Epoch: 10\n",
-      "MAPE = 19.567210256785003, Epoch: 10\n",
+      "MAPE = 28.511889820778908, Epoch: 1\n",
+      "MAPE = 26.213318138870566, Epoch: 2\n",
+      "MAPE = 23.52020961112681, Epoch: 3\n",
+      "MAPE = 22.329663151251943, Epoch: 4\n",
+      "MAPE = 22.09109093528813, Epoch: 5\n",
+      "MAPE = 21.35484215982992, Epoch: 6\n",
+      "MAPE = 21.346517549868537, Epoch: 7\n",
+      "MAPE = 21.204866097444057, Epoch: 8\n",
+      "MAPE = 21.00508078004866, Epoch: 9\n",
+      "MAPE = 21.048153700028237, Epoch: 10\n",
+      "MAPE = 20.817697017124438, Epoch: 11\n",
+      "MAPE = 21.117350488006846, Epoch: 12\n",
+      "MAPE = 21.089242766915493, Epoch: 13\n",
+      "MAPE = 20.864051308535192, Epoch: 14\n",
+      "MAPE = 20.539290611899695, Epoch: 15\n",
+      "MAPE = 19.37055386141652, Epoch: 15\n",
       "Saving model\n",
       "\n",
-      " Final MAPE = 19.567210256785003\n",
+      "Final MAPE = 19.37055386141652\n",
       "Final Frame\n",
       "       Q_OIS_true  Q_OIS_predict\n",
       "id                              \n",
-      "46473        36.0           31.0\n",
-      "39186       641.0          515.0\n",
-      "38311       162.0          175.0\n",
-      "49577        23.0           44.0\n",
-      "349         154.0          153.0\n",
+      "46473        36.0           30.0\n",
+      "39186       641.0          523.0\n",
+      "38311       162.0          174.0\n",
+      "49577        23.0           39.0\n",
+      "349         154.0          152.0\n",
       "...           ...            ...\n",
-      "32426       100.0           84.0\n",
-      "16108       209.0          209.0\n",
-      "13508       275.0          227.0\n",
-      "15         1144.0         1433.0\n",
-      "17982        84.0           83.0\n",
+      "32426       100.0           83.0\n",
+      "16108       209.0          210.0\n",
+      "13508       275.0          226.0\n",
+      "15         1144.0         1386.0\n",
+      "17982        84.0           77.0\n",
       "\n",
       "[1563 rows x 2 columns]\n"
      ]
@@ -230,7 +245,7 @@
    ],
    "source": [
     "# обучение модели\n",
-    "epochs = 10\n",
+    "epochs = 15\n",
     "for epoch in range(epochs):\n",
     "    for i in range(len(X_train)):\n",
     "        j = torch.tensor(X_train.iloc[i])\n",
@@ -242,7 +257,7 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    \n",
-    "    count_epochs += 1\n",
+    "    current_epochs += 1\n",
     "    check(X_valid, y_valid, main_mape)\n",
     "\n",
     "final_frame, main_mape = check(X_test, y_test, main_mape, True)\n",
@@ -253,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -261,17 +276,17 @@
      "output_type": "stream",
      "text": [
       "         id  Q_OIS\n",
-      "0         6  291.0\n",
-      "1         8  759.0\n",
-      "2        22   77.0\n",
-      "3        23   66.0\n",
-      "4        24  151.0\n",
+      "0         6  276.0\n",
+      "1         8  644.0\n",
+      "2        22   71.0\n",
+      "3        23   64.0\n",
+      "4        24   94.0\n",
       "...     ...    ...\n",
-      "3890  59941   34.0\n",
-      "3891  59947   45.0\n",
-      "3892  59952   24.0\n",
-      "3893  60052   61.0\n",
-      "3894  60111   37.0\n",
+      "3890  59941   25.0\n",
+      "3891  59947   37.0\n",
+      "3892  59952   17.0\n",
+      "3893  60052   50.0\n",
+      "3894  60111   15.0\n",
       "\n",
       "[3895 rows x 2 columns]\n"
      ]
@@ -286,7 +301,7 @@
        ")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
